# QOF-visualisation

./: .copier-answers.yml  .gitignore  .sqlfluff  .sqruff  .user.yml  LICENSE  README.md  dbt_project.yml  development.md  plan.md  practice_visualisation.py  profiles.yml  pyproject.toml  resources.md  shape_qof_year.py  spec.md
.github/workflows/: ci.yml
backup/: dashboard_optimized.py  db_connection_new.py  test_mcp.py
devtools/: lint.py
models/staging/gp/: _gp__models.yml  _gp__sources.yml  stg_gp__practice_location_info.sql
models/staging/ind/: _ind__models.yml  _ind__sources.yml  stg_ind__achievement_2019_2020.sql  stg_ind__achievement_2020_2021.sql  stg_ind__achievement_2021_2022.sql  stg_ind__achievement_2022_2023.sql  stg_ind__achievement_2023_2024.sql  stg_ind__indicators_2019_2020.sql  stg_ind__indicators_2020_2021.sql  stg_ind__indicators_2021_2022.sql  stg_ind__indicators_2022_2023.sql  stg_ind__indicators_2023_2024.sql
models/staging/nhs/: _nhs__models.yml  _nhs__sources.yml  stg_nhs__structures_2019_2020.sql  stg_nhs__structures_2020_2021.sql  stg_nhs__structures_2021_2022.sql  stg_nhs__structures_2022_2023.sql  stg_nhs__structures_2023_2024.sql
models/staging/pcd/: _pcd__models.yml  _pcd__sources.yml  stg_pcd__reference_set.sql
models/staging/qof/: _qof__models.yml  _qof__sources.yml  stg_qof__achievement_2019_2020.sql  stg_qof__achievement_2020_2021.sql  stg_qof__achievement_2021_2022.sql  stg_qof__achievement_2022_2023.sql  stg_qof__achievement_2023_2024.sql
models/visualisation/: fct__icb_achievement.sql  fct__long_organisation_achievement.sql  fct__national_achievement.sql  fct__pcn_achievement.sql  fct__practice_achievement.sql  fct__practice_performance.sql  fct__practice_register.sql  fct__region_achievement.sql  fct__sub_icb_achievement.sql
practice_folder/: GP_contact_info.parquet  practice_coordinates.parquet
sources/: mapping_indicators_2324.parquet
sources1/: GP_info_and_coordinates.parquet
sources_backup/: PCD_Output_Descriptions_20241205.parquet
src/QOF_visualisation/: QOF_visualisation.py  __init__.py  add_coords.py  assign_lat_long.py  batch_geocode.py  config.yaml  coord_dataclasses.py  create_address_list.py  create_long_model.py  csv_to_parquet.py  dashboard_optimized.py  database_visualisation.py  db_connection.py  distinct_practices.py  duck_run.py  get_gp_coordinates.py  get_sources.py  mcp_query.py  practice_visualisation.py  scratch.py  scratch.sql  shape_qof_year.py  sources.practice_location_info.parquet
src/QOF_visualisation/models/staging/: gp_organisation_info_2019_2020__stg.sql  gp_organisation_info_2020_2021__stg.sql  gp_organisation_info_2021_2022__stg.sql  gp_organisation_info_2022_2023__stg.sql  gp_organisation_info_2023_2024__stg.sql  practice_location_info__stg.sql  qof_2019_2020__stg.sql  qof_2020_2021__stg.sql  qof_2021_2022__stg.sql  qof_2022_2023__stg.sql  qof_2023_2024__stg.sql
src/QOF_visualisation/sources/: full_practice_coordinates_16527.parquet  full_practice_info_new.parquet  gp_location_info.parquet  gp_organisations_2020_2021.parquet  gp_organisations_2022_2023.parquet  joined.parquet  joined_new.parquet  missing_coords.parquet  nhs_organisations_2019_2020.parquet  nhs_organisations_2020_2021.parquet  nhs_organisations_2021_2022.parquet  nhs_organisations_2022_2023.parquet  qof_indicators_2019_2020.parquet  qof_indicators_2020_2021.parquet  qof_indicators_2022_2023.parquet  qof_indicators_2023_2024.parquet  reference_set.parquet  structures_2021_2022.parquet
src/QOF_visualisation/visualization/: app.py  constants.py  data_queries.py  db_connection.py  layout_components.py  state_management.py  text_utils.py  visualization_utils.py
src/sources_backup/: practice_location_info.parquet  structures_2023_2024.parquet
